# AI-Minesweeper-Discovery-Framework

./: """Board container for AI Minesweeper Fr  """Cell object for AI Minesweeper Framew  .gitignore  .prettierignore  404.html  AI Minesweeper Discovery Framework.txt  CHANGELOG.md  CITATION.cff  Makefile  README.md  SECURITY.md  Untitled-1  all_tests.txt  class Board:  codecov.yml  components.json  elements.csv  eslint.config.js  failed_details.txt  failed_tests.txt  failures_by_file.txt  from ai_minesweeper.board import Board  from ai_minesweeper.board import Board,  index.html  mkdocs.yml  mypy.ini  objects.inv  package.json  pyproject.toml  pytest.ini  pytest_failures.txt  requirements-dev.txt  requirements.txt  run_batch.bat  run_batch.sh  sitemap.xml  streamlit_app.py  tailwind.config.js  v1.0_LaunchKit.md  vite.config.js  (+1 more)
LLM_backends/: index.html
__tests__/: App.test.jsx
ai-minesweeper-framework/: README.md
ai_minesweeper/: board.py  board_builder.py  config.py  risk_assessor.py
api/: index.html
bicycle_validation/: index.html
changelog/: index.html
ci_setup/: index.html
citation_map/: index.html
confidence_osc/: index.html
config/: llm.yaml
contributor_guide/: index.html
data/: chi_50digits.txt  confidence_fit_params.json  torus_brot_fft_peaks.csv
design_meta_cell/: index.html
docs/: AI Minesweeper Discovery Framework.docx  LLM_backends.md  api.md  bicycle_validation.md  changelog.md  ci_setup.md  citation_map.md  confidence_osc.md  contributor_guide.md  design_meta_cell.md  glossary.md  gw_validation.md  index.md  meg_protocol_outline.md  meta_cell_usage.md  prime_residue.md  prime_spirals.md  roadmap_overview.md  torus_brot_demo.md  torus_of_tori_and_dpp14.md  web_demo.md  why_torus_matters.md
examples/: README.md  quickstart.ipynb
glossary/: index.html
gw_validation/: index.html
meg_protocol_outline/: index.html
meta_cell_usage/: index.html
notebooks/: PhaseLockMinesweeper.ipynb  PrimeResidueMinesweeper.ipynb  README.md  confidence_oscillation_demo.ipynb  prime_spiral_validation.ipynb  solver_demo.ipynb
prime_residue/: index.html
prime_spirals/: index.html
reports/: evidence_state.json  prime_residue_S.csv  release_audit.csv  release_audit_detailed.csv
roadmap_overview/: index.html
scripts/: README.md  build_whitepage.py  cache_sigma.py  check_no_src_shadow.py  convert_whitepaper.sh  debug_risk_map.py  ensure_single_module.py  fetch_nubase_subset.py  manage_prime_spiral_log.sh  quick_test.py  scrub_terms.sh  smoke_run.py  test_play_solved.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
src/: App.jsx  index.css  index.jsx  main.jsx
tests/: README.md  conftest.py  test_ab_winrate.py  test_basic_functionality.py  test_beta_confidence.py  test_board.py  test_board_attrs.py  test_board_builder.py  test_builder.py  test_builder_csv.py  test_cell.py  test_cli.py  test_cli_play.py  test_click_engine.py  test_import.py  (+23 more)
(+156 files in other folders)
