[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ai-minesweeper"
version = "1.0.0"
description = "AI Minesweeper Game"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "pandas",
    "pytest",
    "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.285",
    "mypy>=1.0",
    "pylint>=2.15",
    "coverage>=7.0"
]

[project.scripts]
minesweeper = "ai_minesweeper.cli:app"

[tool.ruff]
exclude = ["notebooks"]

[tool.mypy]
mypy_path = "src"
exclude = ["build/", "dist/", ".venv/", "archive/", "ai_minesweeper/utils/risk_assessor_spread.py", ".*egg-info/", "tests/helpers/", "ai-minesweeper-framework/src/ai_minesweeper"]
namespace_packages = true
modules = ["ai_minesweeper"]
explicit_package_bases = true

