[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ai-minesweeper"
version = "1.0.2"
description = "AI Minesweeper Game"
authors = [
    { name = "Bradley Peter", email = "bradleypeter1984@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "pandas",
    "pytest",
    "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.285",
    "mypy>=1.0",
    "pylint>=2.15",
    "coverage>=7.0",
    "types-PyYAML",
    "types-requests",
    "types-pandas"
]

[project.scripts]
minesweeper = "ai_minesweeper.cli:app"

[tool.ruff]
exclude = ["notebooks"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

